fix(navbar): fix some overflow

--- a/src/components/navbar.module.css
+++ b/src/components/navbar.module.css
@@ -1,11 +1,11 @@
 .nav {
   &[class*="nav"] {
     display: grid;
-    grid-template-columns: max-content max-content auto;
+    grid-template-columns: min-content min-content auto;
     gap: theme('spacing.2');
 
     @screen sm {
-      grid-template-columns: max-content max-content auto max-content;
+      grid-template-columns: min-content max-content auto max-content;
     }
   }
 }
